x overflow bug fix

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -17,7 +17,8 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
-  main {
+  .content {
     overflow-x: hidden;
+    position: relative;
   }
 }
